k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: find-pepe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy: {}
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: app:latest
        resources:
          limits:
            memory: 200Mi
            cpu: 50m
        ports:
        - name: http-app
          containerPort: 5000
          protocol: TCP
        name: app
        volumeMounts:
        - name: volume
          mountPath: /usr/src/app/public/
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: pepe-pvc
status: {}
