k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: find-pepe
spec:
  selector:
    app: app
  ports:
    - name: http-app
      protocol: TCP
      port: 80
      targetPort: http-app
